// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookShareButton renders 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #056aa6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-filter: brightness(125%);
  filter: brightness(125%);
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 8px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #f8f9fa;
  background-color: #0588cb;
  border: 0;
  border-radius: 4px;
  font-size: 22px;
  font-weight: 700;
  color: #f8f9fa;
  background-color: #3b5998;
  border-radius: 20px;
  text-transform: none;
  border-width: 2px;
  font-size: 16px;
}

.c1:hover {
  -webkit-filter: brightness(90%);
  filter: brightness(90%);
}

.c1:disabled {
  opacity: 0.5;
}

.c1:active {
  -webkit-filter: brightness(85%);
  filter: brightness(85%);
  -webkit-transition: 0.2s ease-in;
  transition: 0.2s ease-in;
}

<a
  class="c0"
  href="https://www.facebook.com/sharer/sharer.php?&u=undefined"
>
  <button
    class="c1"
    font-size="1"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style="vertical-align: middle;"
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m29.4 0.3v5.9h-3.5q-1.9 0-2.6 0.8t-0.7 2.4v4.2h6.6l-0.9 6.6h-5.7v16.9h-6.8v-16.9h-5.7v-6.6h5.7v-4.9q0-4.1 2.3-6.4t6.2-2.3q3.3 0 5.1 0.3z"
        />
      </g>
    </svg>
    <span
      class="c2"
    >
      Share
    </span>
  </button>
</a>
`;

exports[`TwitterShareButton renders 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #056aa6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-filter: brightness(125%);
  filter: brightness(125%);
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #f8f9fa;
  background-color: #0588cb;
  border: 0;
  border-radius: 4px;
  font-size: 22px;
  font-weight: 700;
  color: #f8f9fa;
  background-color: #1da1f2;
  border-radius: 20px;
  text-transform: none;
  border-width: 2px;
  font-size: 16px;
}

.c1:hover {
  -webkit-filter: brightness(90%);
  filter: brightness(90%);
}

.c1:disabled {
  opacity: 0.5;
}

.c1:active {
  -webkit-filter: brightness(85%);
  filter: brightness(85%);
  -webkit-transition: 0.2s ease-in;
  transition: 0.2s ease-in;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 8px;
}

<a
  class="c0"
  href="https://twitter.com/intent/tweet?text=undefined&url=undefined&hashtags=undefined&hashtags=undefined&in-reply-to=undefined"
>
  <button
    class="c1"
    font-size="1"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style="vertical-align: middle;"
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m37.7 9.1q-1.5 2.2-3.7 3.7 0.1 0.3 0.1 1 0 2.9-0.9 5.8t-2.6 5.5-4.1 4.7-5.7 3.3-7.2 1.2q-6.1 0-11.1-3.3 0.8 0.1 1.7 0.1 5 0 9-3-2.4-0.1-4.2-1.5t-2.6-3.5q0.8 0.1 1.4 0.1 1 0 1.9-0.3-2.5-0.5-4.1-2.5t-1.7-4.6v0q1.5 0.8 3.3 0.9-1.5-1-2.4-2.6t-0.8-3.4q0-2 0.9-3.7 2.7 3.4 6.6 5.4t8.3 2.2q-0.2-0.9-0.2-1.7 0-3 2.1-5.1t5.1-2.1q3.2 0 5.3 2.3 2.4-0.5 4.6-1.7-0.8 2.5-3.2 3.9 2.1-0.2 4.2-1.1z"
        />
      </g>
    </svg>
    <span
      class="c2"
    >
      Tweet
    </span>
  </button>
</a>
`;
